[package]
name = "python-dungeon-generator"
version = "0.1.0"
authors = ["weston maine boldt <boldt.weston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
specs = "0.15.0"
specs-derive = "0.4.0"
